--- a/wp-content/themes/cp/bootstrap-3.3.6-dist/css/bootstrap.css
+++ b/wp-content/themes/cp/bootstrap-3.3.6-dist/css/bootstrap.css
@@ -6438,10 +6438,10 @@ button.close {
   .carousel-control .glyphicon-chevron-right,
   .carousel-control .icon-prev,
   .carousel-control .icon-next {
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     margin-top: -10px;
-    font-size: 30px;
+    font-size: 50px;
   }
   .carousel-control .glyphicon-chevron-left,
   .carousel-control .icon-prev {
@@ -7008,12 +7008,10 @@ button.close {
   font-size: 30px;
   line-height: 1;
   position: absolute;
-  right: 22px;
-  -webkit-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  transform: rotate(45deg); }
+  right: 22px;}
+
   .sp-full-screen-button:before {
-    content: '\2195';
+    content: "\e096";
     color: #fff; }
 
 .sp-fade-full-screen {
@@ -7080,11 +7078,12 @@ button.close {
   top: 0;
   margin-left: -10px; }
 
-.sp-arrow {
+.sp-arrow
+ {
   position: absolute;
   display: block;
-  width: 20px;
-  height: 30px;
+  width: 10px;
+  height: 40px;
   cursor: pointer; }
 
 .sp-vertical .sp-arrow {
@@ -7182,7 +7181,7 @@ button.close {
   position: absolute; }
 
 .sp-fade-thumbnail-arrows {
-  opacity: 0;
+  opacity: 1;
   -webkit-transition: opacity .5s;
   transition: opacity 0.5s; }
 
@@ -7195,6 +7194,8 @@ button.close {
   left: 0;
   margin-top: -12px; }
 
+
+
 .sp-left-thumbnails .sp-thumbnail-arrows, .sp-right-thumbnails .sp-thumbnail-arrows {
   height: 100%;
   top: 0;
@@ -7202,12 +7203,13 @@ button.close {
   margin-left: -7px; }
 
 .sp-thumbnail-arrow {
-  position: absolute;
-  display: block;
-  width: 15px;
-  height: 25px;
-  cursor: pointer; }
-
+    position: absolute;
+    display: block;
+    width: 7px;
+    height: 34px;
+    margin: 0 19px;
+    cursor: pointer;
+}
 .sp-left-thumbnails .sp-thumbnail-arrows .sp-thumbnail-arrow, .sp-right-thumbnails .sp-thumbnail-arrows .sp-thumbnail-arrow {
   -webkit-transform: rotate(90deg);
   -ms-transform: rotate(90deg);
