--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -139,9 +139,30 @@ p {
     margin: 0;
 }
 
+.carousel-control {
+    width: 10%;
+}
+
 .carousel-inner .item {}
 
 .carousel-inner .item img {}
+
+.glyphicon-chevron-left:before {
+    content: "\e257";
+}
+
+.glyphicon-chevron-right:before {
+    content: "\e258";
+}
+
+.glyphicon-chevron-left:before,
+.glyphicon-chevron-right:before {
+    width: 50px;
+    width: 50px;
+    height: 50px;
+    margin-top: -10px;
+    font-size: 50px;
+}
 
 section.container,
 div.container.section {
@@ -254,16 +275,20 @@ section.container header.title h3 {
     font-family: 'oswald', sans-serif
 }
 
-.post-option div {
+.post-option .post-readmore {
     display: inline-block;
 }
 
-.post-option div a {
+.post-option a {
     text-transform: uppercase;
     display: inline-block;
     font-size: 19px;
-    color: #999;
-    border-bottom: 1px dotted #999;
+    color: #c2c2c2;
+    border-bottom: 1px dotted #ccc;
+}
+
+.post-option a:hover {
+    color: #000
 }
 
 .post-option .post-social {
@@ -595,7 +620,7 @@ footer p {
 .sp-slides-container,
 .slider-pro {
     background-color: #000;
-    padding: 30px 0;
+    padding: 30px 0 15px;
 }
 
 .sp-full-screen-button {}
@@ -605,23 +630,31 @@ footer p {
     font-size: 48px;
     line-height: 1;
     position: absolute;
-    right: 22px;
-    top: 15px;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
-    transform: rotate(45deg);
+    right: 17px;
+    top: 3px;
 }
 
 .sp-full-screen-button:before {
-    content: '\2195';
-    color: #111111;
+    content: '\e096';
+    color: #fff;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
 }
 
 .sp-fade-full-screen {
     opacity: 1;
     color: #111111;
-    /* -webkit-transition: opacity .5s; */
-    /* transition: opacity 0.5s; */
+    -webkit-transition: opacity .5s;
+    transition: opacity 0.5s;
 }
 
 
