--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -177,29 +177,31 @@ section.container header.title {
 section.container header.title.category {
     margin-bottom: 38px;
 }
-
 section.container header.title h1 {
     font-style: italic;
-    font-size: 55px;
+    font-size: 38px;
+    font-family: 'Libre Baskerville', serif;
     margin: 0;
     border-bottom: 1px solid #000;
     line-height: 83%;
     border-top: 1px solid #000;
     font-weight: 100;
-    padding: 13px;
+    padding: 20px 0;
     margin: 0 15px;
-    letter-spacing: 2px;
+    letter-spacing: 0px;
 }
 
 section.container header.title h3 {
     position: relative;
-    top: -13px;
+    top: -11px;
     margin-bottom: 0;
     background-color: #fff;
     display: inline-block;
     color: #111;
     margin-top: 0;
+    height: 5px;
     padding: 0 15px;
+    line-height: 5px;
 }
 
 .section {}
@@ -617,57 +619,34 @@ footer p {
     margin: 0 15px;
 }
 
-.sp-slides-container,
-.slider-pro {
-    background-color: #000;
-    padding: 30px 0 15px;
+.img-perfil {
+    border-bottom: 1px solid #1111;
+    border-radius: 200px;
+    overflow: hidden;
 }
 
-.sp-full-screen-button {}
-
-.sp-full-screen-button {
-    cursor: pointer;
-    font-size: 48px;
-    line-height: 1;
-    position: absolute;
-    right: 17px;
-    top: 3px;
+.img-perfil img {
+    width: 100%;
 }
 
-.sp-full-screen-button:before {
-    content: '\e096';
-    color: #fff;
-    margin-top: 5px;
-    margin-bottom: 10px;
-    font-size: 24px;
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1;
-    -webkit-font-smoothing: antialiased;
+.perfildescription {
+    text-align: center;
+    margin-top: 30px;
 }
 
-.sp-fade-full-screen {
-    opacity: 1;
-    color: #111111;
-    -webkit-transition: opacity .5s;
-    transition: opacity 0.5s;
+aside .sidebar-box .perfildescription h3 {
+    margin-bottom: 0;
+    top: 0;
+    font-size: 18px;
 }
 
-
-.img-perfil { border-bottom: 1px solid #1111;  border-radius: 200px; overflow: hidden;  }
-
-.img-perfil  img{
- width: 100%;  
+aside .sidebar-box .perfildescription p {
+    font-size: 16px;
+    text-align: center;
+    line-height: 140%;
+    font-style: italic;
 }
 
-.perfildescription { text-align: center; margin-top: 30px; }
-aside .sidebar-box .perfildescription h3{ margin-bottom: 0;  top: 0; font-size: 18px;}
-
-aside .sidebar-box .perfildescription p { font-size: 16px;  text-align: center; line-height: 140%;  font-style: italic;}
 
 /* SOCIAl */
 
@@ -705,6 +684,19 @@ ul.socialbuttons li a {
     float: left;
     margin: 0 10px;
     padding: 0;
+    opacity: .7;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
+}
+
+ul.socialbuttons li a:hover {
+    opacity: 1;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 
 ul.socialbuttons li a {
@@ -868,4 +860,65 @@ span.wpcf7-not-valid-tip {
     font-size: 13px;
     padding: 6px;
     text-align: center;
+}
+
+.slider-pro{ padding: 30px; }
+
+.sp-image-container  {
+    padding: 0 30px;}
+}
+.sp-image-container  img{ opacity: 1;
+        -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
+    transition: all 1s ease-in-out;
+
+ }
+
+ .sp-buttons { display: none; }
+
+.sp-bottom-thumbnails {
+     margin-top: 30px;
+
+}
+
+
+
+.sp-slides-container,
+.slider-pro {
+    background-color: #000;
+}
+
+.sp-full-screen-button {}
+
+.sp-full-screen-button {
+    cursor: pointer;
+    font-size: 48px;
+    line-height: 1;
+    position: absolute;
+    right: 17px;
+    top: 3px;
+}
+
+.sp-full-screen-button:before {
+    content: '\e096';
+    color: #fff;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    font-size: 24px;
+    position: relative;
+    top: 1px;
+    display: inline-block;
+    font-family: 'Glyphicons Halflings';
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+}
+
+.sp-fade-full-screen {
+    opacity: 1;
+    color: #111111;
+    -webkit-transition: opacity .5s;
+    transition: opacity 0.5s;
 }
