--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -731,6 +731,9 @@ a .description:hover {
     border-top: 1px solid#111111;
     background-color: #f5f5f5;
     margin-top: 40px;
+    float: left;
+    width: 100%;
+    padding-bottom: 30px;
 }
 
 @media ( max-width: 375px) {
@@ -746,9 +749,10 @@ a .description:hover {
     #portadas .archive-cat {
         padding: 8px;
     }
-    #portadas .archive-cat a {
-        width: 100%
-    }
+#portadas .archive-cat a {
+    width: 100%;
+    height: 177px;
+}
     aside .sidebar-box {
         border-left: 0 none
     }
@@ -757,11 +761,38 @@ a .description:hover {
     .hidden-sm {
         display: none
     }
+
+    #portadas .archive-cat a {
+    width: 100%;
+    height: 177px;
+}
     .categorias-blog {
         text-align: center;
     }
+
+.archive-cat, .post-content img, #portadas .archive-cat {
+    padding: 8px;
+    height: 196px;
 }
 
+
+}
+
+
+
+@media ( max-width: 325px) { 
+.archive-cat, .post-content img, #portadas .archive-cat {
+    padding: 8px;
+    height: 168px;
+}
+
+#portadas .archive-cat a {
+    width: 100%;
+    height: 148px;
+}
+
+
+}
 #instafeed {
     text-align: left;
 }
@@ -1102,9 +1133,17 @@ span.wpcf7-not-valid-tip {
     -webkit-transition: opacity .5s;
     transition: opacity 0.5s;
 }
-@media (max-width:450px;
-) {
-    .slider-pro {
-        padding:
+
+
+@media (max-width:450px) {
+    .slider-pro, .sp-image-container {
+        padding:0;
     }
+
+   .sp-thumbnails-container { }
+
+    /* .sp-image { margin:auto!important; }
+*/
+    .sp-mask.sp-grab, .sp-slide, .sp-image-container {  }
+
 }
