--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -139,9 +139,16 @@ p {
     margin: 0;
 }
 
+.carousel-indicators { display: none }
 .carousel-control {
-    width: 10%;
+    opacity: .3;
+    width: 4%;
 }
+
+.carousel-control:hover{ opacity: .7;     -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+    transition: all 0.2s ease-in-out; }
 
 .carousel-inner .item {}
 
@@ -251,7 +258,7 @@ p {
     width: 50px;
     height: 50px;
     margin-top: -10px;
-    font-size: 50px;
+    font-size: 35px;
 }
 
 section.container,
@@ -1076,7 +1083,7 @@ span.wpcf7-not-valid-tip {
 }
 
 .slider-pro {
-    padding: 30px;
+    padding:15px;
     margin: 20px auto 0
 }
 
@@ -1146,4 +1153,101 @@ span.wpcf7-not-valid-tip {
 */
     .sp-mask.sp-grab, .sp-slide, .sp-image-container {  }
 
+}
+
+
+.archive-cat, .slider-carusel, .slider-pro, .category-recortes, .post-content {
+   
+    position: relative;
+
+    -moz-animation-name: effect;
+    -moz-animation-iteration-count: 1;
+    -moz-animation-timing-function: ease-in;
+    -moz-animation-duration: 0.6s;
+
+    -webkit-animation-name:  effect;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease-in;
+    -webkit-animation-duration: 0.6s;
+
+    animation-name:  effect;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration:0.6s;
+}
+
+
+@-moz-keyframes  effect {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        
+    }
+}
+@-webkit-keyframes  effect {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+       
+    }
+}
+@keyframes  effect {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+       
+    }
+}
+
+
+.sp-image-container{
+    -moz-animation-name: slider-img;
+    -moz-animation-iteration-count: 1;
+    -moz-animation-timing-function: ease-in;
+    -moz-animation-duration: 1.3s;
+
+    -webkit-animation-name: slider-img;
+    -webkit-animation-iteration-count: 1;
+    -webkit-animation-timing-function: ease-in;
+    -webkit-animation-duration: 1.3s;
+
+    animation-name: slider-img;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in;
+    animation-duration:1.3s;
+
+}
+
+@-moz-keyframes slider-img {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+        
+    }
+}
+@-webkit-keyframes slider-img {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+       
+    }
+}
+@keyframes slider-img {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+       
+    }
 }
