Grilla y pagina video

--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -330,6 +330,7 @@ section.container header.title h3 {
     margin-top: 28px;
 }
 
+.post-list 
 .post-content {
     margin: 28px 0;
     padding-bottom: 28px;
@@ -464,7 +465,10 @@ section.container header.title h3 {
 .col-md-9.post-list .post-img {
     padding: 0;
     width: 80%;
+
 }
+
+.col-md-9 .pagination{ text-align: center;    margin: 0 auto; }
 
 ul.menu-blog {
     font-size: 18px;
@@ -740,7 +744,6 @@ a .description:hover {
     margin-top: 40px;
     float: left;
     width: 100%;
-    padding-bottom: 30px;
 }
 
 @media ( max-width: 375px) {
@@ -1251,3 +1254,41 @@ span.wpcf7-not-valid-tip {
        
     }
 }
+
+.gallery  {  margin-bottom: 45px;}
+
+
+.gallery .gallery-item {
+    border: 1px solid #ccc !important;
+    height: 250px;
+    margin: 1% !important;
+    overflow: hidden;
+    padding: 8px;
+    width: 48% !important;
+}
+
+
+.gallery .gallery-item dt {
+    display: table;
+    height: 100%;
+    position: relative;
+}
+
+.gallery .gallery-item a {
+    border: 0 none !important;
+    display: table-cell;
+    height: 100%;
+    padding: 0;
+    text-align: center;
+    vertical-align: middle;
+    width: 100%;
+}
+
+    .gallery .gallery-item a img { 
+        padding: 0;  border: 0 none!important; margin-bottom:0; 
+         width: auto;
+         border:0 none;
+}
+ 
+.gallery .gallery-item dt { width: 100%;} 
+
