--- a/wp-content/themes/cp/css/style.css
+++ b/wp-content/themes/cp/css/style.css
@@ -150,6 +150,33 @@ p {
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out; }
 
+.carousel-fade .carousel-inner .item {
+  -webkit-transition-property: opacity;
+  transition-property: opacity;
+}
+.carousel-fade .carousel-inner .item,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  opacity: 0;
+}
+.carousel-fade .carousel-inner .active,
+.carousel-fade .carousel-inner .next.left,
+.carousel-fade .carousel-inner .prev.right {
+  opacity: 1;
+}
+.carousel-fade .carousel-inner .next,
+.carousel-fade .carousel-inner .prev,
+.carousel-fade .carousel-inner .active.left,
+.carousel-fade .carousel-inner .active.right {
+  left: 0;
+  -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+}
+.carousel-fade .carousel-control {
+  z-index: 2;
+}
+
+
 .carousel-inner .item {}
 
 .carousel-inner .item img {}
@@ -719,7 +746,33 @@ a .description:hover {
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
 }
+.archive-cat {
+    position: relative;
+}
+.archive-cat > iframe {
+    background-color: #000;
+    position: relative;
+    z-index: 0;
+}
+.description-video {
+    background-color: #000;
+    bottom: 13px;
+    color: #fff;
+    left: 15px;
+    padding: 5px 10px;
+    position: absolute;
+    z-index: 10000;
+}
 
+.description-video h2 {   font-family: 'Oswald', sans-serif;
+    vertical-align:bottom;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: 100;   font-family: 'Oswald', sans-serif;
+    vertical-align:bottom;
+    text-transform: uppercase;
+    font-size: 18px; letter-spacing: 2px;
+    font-weight: 100; margin: 0;}
 
 /* RECORTES */
 
